--- a/index.css
+++ b/index.css
@@ -1,74 +1,89 @@
 body {
     background-color: rgb(246, 247, 220);
     margin: 0;
+    padding: 20px;
     font-family: 'Times New Roman', Times, serif;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
- #h1 {
-    color: rgb(92, 98, 124);
-    font-size: 2.5em;
+h1.title {
     text-align: center;
-    margin-top: 1.5em;
-    margin-bottom: 1em;
-    padding-bottom: 1em;
+    font-size: 64px;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0px;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 .th, td {
-    border: 1px solid black;
-    padding: 20px;
-    background-color: rgb(203, 211, 248);
+    padding: 4px;
     color: black;
-    font-size: 1.5em;
+    font-size: 16px;
 }
 
-.tr{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+th {
+    background-color: rgb(114, 131, 208);;
 }
 
-.btn {
+td {
+    background-color: rgb(221, 224, 240);
+    height: 25px; /* Set a fixed height for the newly added row */
+    max-height: 10px;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+}
+
+.button, .hide-col1-container {
+    flex: 1;
     background-color: rgb(92, 98, 124);
     color: white;
-    padding: 10px;
+    padding: 12pxpx;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 1em;
-    margin: 4px 2px;
+    font-size: 16px;
+    margin-bottom: 6px;
     cursor: pointer;
-    border-radius: 12px;
-    width: 100px; 
+    border-radius: 8px;
+    min-width: 120px;
+    width: 100%; /* Make the button occupy the full width of its parent */
+    font-family: 'Courier New', Courier, monospace;
 }
 
-#btnTable {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+.button-container {
+    background-color: rgb(255, 255, 255);
+}
+
+.grid-container {
+    background-color: rgb(255, 255, 255);
+    
+    display: grid;
+    grid-template-columns: 250px 1fr;
     gap: 10px;
-    margin-top: 1em;
-    margin-right: 200px;
+
+    height: 500px;
+    max-width: 1100px;
+    padding: 50px;
+    margin: auto;
+    text-align: center;
+    border-radius: 12px;
 }
 
-.tableContainer {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: center;
+.table-container {
+    padding: 0px;
+    height: 100%;
+    background-color: rgb(253, 249, 255);
+    overflow-y: auto;
+    border-radius: 12px;
+    border: 1px solid black;
 }
 
 #table1 {
-    margin: 0 auto;
     width: 100%;
-    max-width: 800px;
-    border-collapse: collapse;
-    text-align: center;
+    table-layout: fixed;
+    border-spacing: 0;
+    
 }
 
 @media screen and (max-width: 768px) {
